Adding changes to desktop sizes

--- a/fylo-dark-theme-landing-page-master/index.html
+++ b/fylo-dark-theme-landing-page-master/index.html
@@ -175,55 +175,58 @@
     </section>
   </main>
   <footer class="footer flex-display">
-    <picture class="footer__logo">
-      <img src="./images/logo.svg" alt="Fylo">
-    </picture>
-    <!-- Grid container -->
-    <div class="grid-container">
-      <!-- Contact-box-1 -->
-      <div class="contact-box-1">
-        <div class="location contact-flex flex-display">
-          <img src="./images/icon-location.svg" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+    <section class="main-footer flex-display">
+      <picture class="footer__logo">
+        <img src="./images/logo.svg" alt="Fylo">
+      </picture>
+      <!-- Grid container -->
+      <div class="grid-container">
+        <!-- Contact-box-1 -->
+        <div class="contact-box-1">
+          <div class="location contact-flex flex-display">
+            <img src="./images/icon-location.svg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          </div>
+        </div>
+        <!-- Contact-box-2 -->
+        <div class="contact-box-2">
+          <div class="call contact-flex flex-display">
+            <img src="./images/icon-phone.svg" alt="">
+            <p>+1-543-123-4567</p>
+          </div>
+          <div class="email contact-flex flex-display">
+            <img src="./images/icon-email.svg" alt="">
+            <p>example@fylo.com</p>
+          </div>
+        </div>
+        <!-- more links -1 -->
+        <div class="more-info self-box flex-display">
+          <p><a href="#">About Us</a></p>
+          <p><a href="#">Jobs</a></p>
+          <p><a href="#">Press</a></p>
+          <p><a href="#">Blog</a></p>
+        </div>
+        <!-- more links -2 -->
+        <div class="more-info self-box flex-display">
+          <p><a href="#">Contact Us</a></p>
+          <p><a href="#">Terms</a></p>
+          <p><a href="#">Privacy</a></p>
+        </div>
+      <!-- Socials -->
+        <div class="social-icons flex-display">
+          <a href="#" class="social-icon flex-display" aria-label="facebook">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="social-icon flex-display" aria-label="twitter">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="social-icon flex-display" aria-label="instagram">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
         </div>
       </div>
-      <!-- Contact-box-2 -->
-      <div class="contact-box-2">
-        <div class="call contact-flex flex-display">
-          <img src="./images/icon-phone.svg" alt="">
-          <p>+1-543-123-4567</p>
-        </div>
-        <div class="email contact-flex flex-display">
-          <img src="./images/icon-email.svg" alt="">
-          <p>example@fylo.com</p>
-        </div>
-      </div>
-      <!-- more links -1 -->
-      <div class="more-info self-box flex-display">
-        <p><a href="#">About Us</a></p>
-        <p><a href="#">Jobs</a></p>
-        <p><a href="#">Press</a></p>
-        <p><a href="#">Blog</a></p>
-      </div>
-      <!-- more links -2 -->
-      <div class="more-info self-box flex-display">
-        <p><a href="#">Contact Us</a></p>
-        <p><a href="#">Terms</a></p>
-        <p><a href="#">Privacy</a></p>
-      </div>
-    <!-- Socials -->
-      <div class="social-icons flex-display">
-        <a href="#" class="social-icon flex-display" aria-label="facebook">
-          <i class="fa-brands fa-facebook-f"></i>
-        </a>
-        <a href="#" class="social-icon flex-display" aria-label="twitter">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="#" class="social-icon flex-display" aria-label="instagram">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-      </div>
-    </div>
+    </section>
+    
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
