--- a/single-page-design-portfolio/index.html
+++ b/single-page-design-portfolio/index.html
@@ -75,10 +75,10 @@
         <img src="./assets/image-slide-5.jpg" alt="fifth-image" class="carousel-image">
       </div>
       <div class="carousel__arrows flex-display">
-        <button class="arrow flex-display black" id="left-btn">
+        <button class="arrow flex-display black" id="left-btn" aria-label="left-button">
           <img src="./assets/icon-arrow-left.svg" alt="">
         </button>
-        <button class="arrow flex-display black" id="right-btn">
+        <button class="arrow flex-display black" id="right-btn" aria-label="right-button">
           <img src="./assets/icon-arrow-right.svg" alt="">
         </button>
       </div>
@@ -101,6 +101,10 @@
       </picture>
       <button class="button__cta black">Free Consultation</button>
     </nav>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/vidhitvarma" target="_blank">Vidhit Varma</a>.
+    </p>
   </footer>
   <!-- 
 
