--- a/single-page-design-portfolio/index.html
+++ b/single-page-design-portfolio/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="single page design portofilo frontend mentor">
   <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
   <title>Frontend Mentor | Single-page design portfolio</title>
 </head>
 <body>
