--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -159,11 +159,11 @@
   <footer class="footer flex-display">
     <section class="upper-footer flex-display">
       <h1 class="footer-logo">sunnyside</h1>
-      <div class="footer-links flex-display">
+      <ul class="footer-links flex-display">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Projects</a></li>
-      </div>
+      </ul>
       <div class="social-icons flex-display">
         <a href="#" class="social-icon flex-align" aria-label="facebook">
           <i class="fa-brands fa-square-facebook fa-lg"></i>
