--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -19,7 +19,7 @@
           <li><a href="#">About</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Projects</a></li>
-          <button class="button">Contact</button>
+          <li><button class="button">Contact</button></li>
         </ul>
       </nav>
       <div class="hamburger-menu" id="hamburger-menu">
@@ -39,7 +39,7 @@
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#"> Projects</a></li>
-      <button class="button">Contact</button>
+      <li><button class="button">Contact</button></li>
     </ul>
   </div>
   <main class="main">
@@ -58,7 +58,7 @@
             Engage your clients through compelling visuals that do most of the marketing for you.
           </p>
           <button class="main-button yellow-button">
-            <p>Learn more</p>
+            Learn more
             <div class="bottom-line yellow-line"></div>
           </button>
         </div>
@@ -75,7 +75,7 @@
             Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
           </p>
           <button class="main-button red-button">
-            <p>Learn more</p>
+            Learn more
             <div class="bottom-line red-line"></div>
           </button>
         </div>
@@ -137,24 +137,24 @@
       
     </section>
     <!-- Image-box -->
-    <section class="samples">
-      <picture class="bottom-image">
+    <article class="samples">
+      <div class="bottom-image">
         <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="milk-bottles" class="mobile-bottom-image">
         <img src="./images/desktop/image-gallery-milkbottles.jpg" alt="milk-bottles" class="desktop-bottom-image">
-      </picture>
-      <picture class="bottom-image">
+      </div>
+      <div class="bottom-image">
         <img src="./images/mobile/image-gallery-orange.jpg" alt="oranges" class="mobile-bottom-image">
         <img src="./images/desktop/image-gallery-orange.jpg" alt="oranges" class="desktop-bottom-image">
-      </picture>
-      <picture class="bottom-image">
+      </div>
+      <div class="bottom-image">
         <img src="./images/mobile/image-gallery-cone.jpg" alt="cone" class="mobile-bottom-image">
         <img src="./images/desktop/image-gallery-cone.jpg" alt="cone" class="desktop-bottom-image">
-      </picture>
-      <picture class="bottom-image">
+      </div>
+      <div class="bottom-image">
         <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="cubes" class="mobile-bottom-image">
         <img src="./images/desktop/image-gallery-sugarcubes.jpg" alt="cubes" class="desktop-bottom-image">
-      </picture>
-    </section>
+      </div>
+    </article>
   </main>
   <footer class="footer flex-display">
     <section class="upper-footer flex-display">
