adding design changes for other sizes

--- a/typemaster-pre-launch-landing-page/index.html
+++ b/typemaster-pre-launch-landing-page/index.html
@@ -15,7 +15,8 @@
     <button class="button light-button">Pre-order now</button>
   </header>
   <main class="main">
-    <section class="intro">
+    <section class="intro flex-display">
+      <img src="./assets/shared/pattern-square.svg" alt="" class="square-box">
       <article class="intro__description flex-display">
         <h1 class="lg-header">Typemaster keyboard</h1>
         <p class="intro__para normal-text">
@@ -26,8 +27,8 @@
           <button class="button orange-button">Pre-order now</button>
           <p class="release-date">Release on 5/27</p>
         </div>
-        <div class="intro__background-img img-box"></div>
       </article>
+      <div class="intro__background-img img-box"></div>
     </section>
     <!-- Keyboard showcase -->
     <section class="keyboards flex-display">
@@ -42,6 +43,7 @@
           of switches and keycaps, along with reliable wireless connectivity.
         </p>
       </article>
+      <img src="./assets/shared/pattern-square.svg" alt="" class="square-box">
     </section>
     <!-- Grid container -->
     <section class="features flex-display">
