adding styles for different layouts

--- a/maker-pre-launch-landing-page/index.html
+++ b/maker-pre-launch-landing-page/index.html
@@ -14,19 +14,28 @@
       <img src="./assets/logo.svg" alt="maker">
     </picture>
     <img src="./assets/illustration-hero-mobile.png" alt="mobile-hero" class="mobile-header">
-    <section class="header__description flex-display">
-      <h1 class="hero-header">Get paid for the work you <span class="blue">love</span> to do.</h1>
-      <p class="normal-text">
-        The 9-5 grind is so last century. We believe in living life on your 
-        own terms. Whether you’re looking to escape the rat race or set up 
-        a side hustle, we’ve got you covered.
-      </p>
-      <img src="./assets/icon-scroll.svg" alt="mouse" class="mouse">
+    <section class="middle-section">
+      <div class="image-left big-image">
+        <img src="./assets/illustration-hero-left.svg" >
+      </div>
+      <section class="header__description flex-display">
+        <h1 class="hero-header">Get paid for the work you <span class="blue">love</span> to do.</h1>
+        <p class="normal-text">
+          The 9-5 grind is so last century. We believe in living life on your 
+          own terms. Whether you’re looking to escape the rat race or set up 
+          a side hustle, we’ve got you covered.
+        </p>
+        <img src="./assets/icon-scroll.svg" alt="mouse" class="mouse">
+      </section>
+      <div class="image-right big-image">
+        <img src="./assets/illustration-hero-right.svg">
+      </div>
     </section>
+
   </header>
   <main class="main">
     <section class="features-container">
-      <div class="feature-box flex-display">
+      <div class="feature-box flex-display right-align">
         <div class="img-container flex-display">
           <img src="./assets/illustration-passions.svg" alt="passions" class="feature-img passions">
         </div>
@@ -37,7 +46,7 @@
           </p>
         </div>
       </div>
-      <div class="feature-box flex-display">
+      <div class="feature-box flex-display bottom-align">
         <div class="img-container flex-display">
           <img src="./assets/illustration-financial-freedom.svg" alt="freedom" class="feature-img freedom">
         </div>
@@ -48,7 +57,7 @@
           </p>
         </div>
       </div>
-      <div class="feature-box flex-display">
+      <div class="feature-box flex-display right-align">
         <div class="img-container flex-display">
           <img src="./assets/illustration-lifestyle.svg" alt="lifestyle" class="feature-img lifestyle">
         </div>
@@ -59,7 +68,7 @@
           </p>
         </div>
       </div>
-      <div class="feature-box flex-display">
+      <div class="feature-box flex-display bottom-align">
         <div class="img-container flex-display">
           <img src="./assets/illustration-work-anywhere.svg" alt="anywhere" class="feature-img anywhere">
         </div>
