changing footer logo

--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -158,7 +158,10 @@
   </main>
   <footer class="footer flex-display">
     <section class="upper-footer flex-display">
-      <h1 class="footer-logo">sunnyside</h1>
+      <!-- <h1 class="footer-logo">sunnyside</h1> -->
+      <picture class="bottom-logo">
+        <img src="./images/logo-bottom.svg" alt="">
+      </picture>
       <ul class="footer-links flex-display">
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
